# civec

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  release.yml
src/civec/: __init__.py  models.py  protocols.py  records.py  schema.py
src/civec/clients/: __init__.py  http.py
src/civec/core/: __init__.py  db.py  logging_utils.py  models.py  rabbitmq.py  rabbitmq_consumer.py
src/civec/extensions/: __init__.py
src/civec/extensions/detection_queues/: __init__.py  models.py  rules.py  service.py
src/civec/extensions/gateway/: __init__.py  service.py
src/civec/extensions/reranking/: __init__.py  cosine.py
src/civec/ingestion/: __init__.py  batching.py  engine.py  models.py  worker.py
src/civec/lancedb/: __init__.py  client.py
src/civec/query/: __init__.py  service.py
src/civec/rules/: __init__.py  engine.py  field_access.py  models.py
src/civec/sharding/: __init__.py  models.py  router.py
tests/: test_generic_records.py  test_ingestion_engine.py
