[project]
name = "civec"
version = "0.1.0"
description = "Generic vector infrastructure components"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic",
]

[project.optional-dependencies]
clients = [
  "httpx",
]
lancedb = [
  "lancedb",
  "pyarrow",
]
rabbitmq = [
  "pika>=1.3.2",
]
ingestion = [
  "numpy",
]
fastapi = [
  "fastapi",
]
tenants-sql = [
  "psycopg[binary]>=3.2.10",
  "sqlalchemy>=2.0.45",
]
rules-geometry = [
  "shapely>=2.1.2",
]
query = [
  "numpy",
  "pandas",
  "scikit-learn",
]
detections = [
  "psycopg[binary]>=3.2.10",
  "sqlalchemy>=2.0.45",
]
gateway = [
  "pydantic-settings",
]
gateway-ui = [
  "streamlit>=1.54,<1.55",
]
dev = [
  "pyright>=1.1.403",
  "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/civec"]

[tool.hatch.build.targets.sdist]
exclude = [
  ".gitignore",
]
include = [
  "README.md",
  "pyproject.toml",
  "pyrightconfig.json",
  "src/civec",
  "tests",
]
